src/main/java/com/example/authorization_service/error/UnauthorizedUser.java
package com.example.authorization_service.error;

import com.example.authorization_service.service.AuthorizationService;
import org.springframework.http.HttpStatusCode;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

public class UnauthorizedUser extends RuntimeException {
    public UnauthorizedUser(String msg) {
        super(msg);
    }
}
